--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -5,3 +5,13 @@
 .choresHeading {
    color: black;
 }
+
+.choresText {
+   color: red;
+   font-size: 1.3vw;
+   text-align: left;
+}
+
+.choresHeading {
+   text-align: left;
+}
