--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -5,3 +5,13 @@
 .movieHeading {
    color: black;
 }
+
+.movieText {
+   color: purple;
+   font-size: 1.3vw;
+   text-align: left;
+}
+
+.movieHeading {
+   text-align: left;
+}
