--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,5 +1,5 @@
 .choresText {
-   color: black;
+   color: rgb(178, 113, 113);
 }
 
 .choresHeading {
@@ -7,7 +7,7 @@
 }
 
 .choresText {
-   color: red;
+   color: purple;
    font-size: 1.3vw;
    text-align: left;
 }
